crates/providers/gemini/tests/snapshots/streaming__stream_function_call_chunks.snap
---
source: crates/providers/gemini/tests/streaming.rs
expression: "&chunks"
---
[
  {
    "id": "[id]",
    "object": "chat.completion.chunk",
    "created": "[timestamp]",
    "model": "gemini-3.1-pro",
    "choices": [
      {
        "index": 0,
        "delta": {
          "role": "assistant"
        },
        "finish_reason": null
      }
    ]
  },
  {
    "id": "[id]",
    "object": "chat.completion.chunk",
    "created": "[timestamp]",
    "model": "gemini-3.1-pro",
    "choices": [
      {
        "index": 0,
        "delta": {
          "tool_calls": [
            {
              "id": "[call_id]",
              "type": "function",
              "function": {
                "name": "get_weather",
                "arguments": "{\"location\":\"London\"}"
              }
            }
          ]
        },
        "finish_reason": "tool_calls"
      }
    ],
    "usage": {
      "prompt_tokens": 20,
      "completion_tokens": 10,
      "total_tokens": 30,
      "cached_tokens": 0
    }
  }
]
