crates/providers/gemini/tests/snapshots/streaming__stream_happy_path_chunks.snap
---
source: crates/providers/gemini/tests/streaming.rs
expression: "&chunks"
---
[
  {
    "id": "[id]",
    "object": "chat.completion.chunk",
    "created": "[timestamp]",
    "model": "gemini-3.1-pro",
    "choices": [
      {
        "index": 0,
        "delta": {
          "role": "assistant"
        },
        "finish_reason": null
      }
    ]
  },
  {
    "id": "[id]",
    "object": "chat.completion.chunk",
    "created": "[timestamp]",
    "model": "gemini-3.1-pro",
    "choices": [
      {
        "index": 0,
        "delta": {
          "content": "Hello"
        },
        "finish_reason": null
      }
    ]
  },
  {
    "id": "[id]",
    "object": "chat.completion.chunk",
    "created": "[timestamp]",
    "model": "gemini-3.1-pro",
    "choices": [
      {
        "index": 0,
        "delta": {
          "content": " "
        },
        "finish_reason": null
      }
    ]
  },
  {
    "id": "[id]",
    "object": "chat.completion.chunk",
    "created": "[timestamp]",
    "model": "gemini-3.1-pro",
    "choices": [
      {
        "index": 0,
        "delta": {
          "content": "world!"
        },
        "finish_reason": "stop"
      }
    ],
    "usage": {
      "prompt_tokens": 10,
      "completion_tokens": 3,
      "total_tokens": 13,
      "cached_tokens": 0
    }
  }
]
